Updated About me text and fixed padding for footer overlapping when the page isn't long enough.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -98,7 +98,7 @@ body {
 
 main {
   padding: $paddingGeneral;
-  margin: 0 auto;
+  margin: 0 auto 7rem auto;
 
   @supports(padding: max(0px)) {
     padding-left: unquote('max(#{1.5rem}, env(safe-area-inset-left))');
